syntax = "proto3";
package routing;

option go_package = "github.com/danmuck/dps_net/network/routing";

import "api/rpc.proto";        // for api.Contact

// ----------------------------------------------------------------
// Messages
// ----------------------------------------------------------------
message PING      { api.Contact from = 1; bytes value = 2; }
message ACK       { api.Contact from = 1; bytes value = 2; }
message STORE     { api.Contact from = 1; bytes key = 2; bytes value = 3; }
message DELETE    { api.Contact from = 1; bytes key = 2; }
message FIND_NODE { api.Contact from = 1; bytes target_id = 2; }
message FIND_VALUE{ api.Contact from = 1; bytes key = 2; }
message NODES     { api.Contact from = 1; repeated api.Contact nodes = 2; }
message VALUE     { api.Contact from = 1; bytes key = 2; bytes value = 3; repeated api.Contact nodes = 4; }
message REFRESH   { api.Contact from = 1; bytes key = 2; }

// ----------------------------------------------------------------
// Core Kademlia service
// ----------------------------------------------------------------
service KademliaService {
  // Ping a node — gets an ACK
  rpc Ping      (PING)       returns (ACK);
  // Store or overwrite a value
  rpc Store     (STORE)      returns (ACK);
  // Delete a key
  rpc Delete    (DELETE)     returns (ACK);
  // Find the k closest nodes to a target ID
  rpc FindNode  (FIND_NODE)  returns (NODES);
  // Try to fetch a value, or fallback to NODES
  rpc FindValue (FIND_VALUE) returns (VALUE);
  // Refresh a value’s timeout (optional)
  rpc Refresh   (REFRESH)    returns (ACK);
}
